# vibecleaner

./: .gitignore  DEVELOPMENT_STATUS.md  LICENSE  NOTICE  README.en.md  README.md  app.meta.json  download_models.py  package-lock.json  package.json  pyproject.toml  requirements-build.txt  requirements-runtime.txt  requirements-test.txt  requirements-torch.txt  requirements.txt  ruff.toml
.claude/: launch.json
backend/: batch_runner.py  core.py  main.py
benchmarks/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: backend_client.rs  backend_process.rs  error.rs  image_protocol.rs  lib.rs  main.rs
docs/: architecture.md  backend-dependency-contract.md  development-guide.ko.md  development-guide.md  model-guide.ko.md  model-guide.md  provider-extension-contract.md  schema-versioning-policy.md  shadow-benchmark.md  ui-ux-improvement-plan.ko.md
frontend/: index.html  package-lock.json  package.json
scripts/: aggregate_pipeline_benchmark.py  annotate_detection_corpus.py  benchmark_detection_recall.py  benchmark_edge_margin.py  benchmark_golden_regression.py  benchmark_pipeline_parallel.py  benchmark_pipeline_scheduler.py  build-runtime-sidecar.ps1  capture_detection_predictions.py  evaluate_pipeline_rollout.py  evaluate_quality_corpus.py  generate_test_images.py  sync-version.mjs  verify-packaging.py  verify_gpu_runtime.py
tests/: test_adaptive_typesetting_v2.py  test_api_container_dependencies.py  test_auto_typeset_pipeline.py  (+73 more)
(+412 files in other folders)
