[package]
name = "vibecleaner"
version = "0.2.0"
description = "vibecleaner - Manga Image Translation & Editing Tool"
authors = ["you"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vibecleaner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
rfd = "0.15"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread", "macros"] }
base64 = "0.22"
getrandom = "0.3"
hmac = "0.12"
sha2 = "0.10"
percent-encoding = "2.3"
url = "2.5"
http = "1"
